veecle-os-runtime-macros/tests/ui/storable/duplicate_data_type.rs
#[derive(Debug, veecle_os_runtime_macros::Storable)]
#[storable(data_type = "u8", data_type = "u16")]
pub struct Sensor {
    test: u8,
}

fn main() {}
